# 3d-printer-monitor

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
ml_api/: Dockerfile  detection_model.py  requirements.txt  server.py
ml_api/model/: model.cfg
notebooks/: train_yolo11_failure_detection.ipynb
stream_analyzer/: Dockerfile  __init__.py  analyzer.py  bambu_controller.py  image_analyzer.py  requirements.txt  rtsp_camera.py
stubs/bambulabs_api/: __init__.pyi  states_info.pyi
stubs/flask_compress/: __init__.pyi
stubs/onnxruntime/: __init__.pyi
tests/: __init__.py  conftest.py  test_connections.ipynb  test_failure_detection.py  test_printer_connection.py  test_rtsp_camera.py  test_unit.py
