[project]
name = "3d-printer-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bambulabs-api>=2.6.5",
    "flask>=3.1.2",
    "flask-compress>=1.23",
    "gunicorn>=24.1.1",
    "ipykernel>=7.1.0",
    "numpy>=2.4.1",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.13.0.90",
    "opencv-python-headless>=4.13.0.90",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]


[project.optional-dependencies]
dev = [
    "google-api-python-client-stubs>=1.30.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "mypy>=1.17.0",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "types-requests>=2.32.4.20250611",
]

[tool.uv.workspace]
members = [
  "src/stream_ingestor",
]

[tool.ruff]
line-length = 130 # high for top level due to tests
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",    # incompatible with D211
  "D213",    # incompatible with D212
  "S101",    # asserts are fine
  "TRY003",  # raise-vanilla-args: too verbose for simple raises
  "EM101",   # raw-string-in-exception: too verbose
  "EM102",   # f-string-in-exception: too verbose
  "G004",    # logging-f-string: f-strings are more readable
  "FBT001",  # boolean-type-hint-positional-argument
  "FBT002",  # boolean-default-value-positional-argument
  "PLR2004", # magic-value-comparison: too strict for ML code
  "PLR0913", # too-many-arguments: ML functions need many params
  "TRY300",  # try-consider-else: returns in try blocks are fine
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["TRY300", "BLE001", "ANN401", "SLF001", "E501", "S105", "ARG001", "ARG002", "S106", "INP001", "PLC0415", "T201"]
"**/conftest.py" = ["PLC0415"]
"ml_api/*.py" = ["T201", "S104", "S201", "PLW0603", "PLC0415", "INP001"]
"notebooks/*.ipynb" = ["T201", "ERA001", "E501", "NPY002", "E402", "INP001", "PTH123", "A004", "PTH207"]
"tests/*.ipynb" = ["T201", "INP001"]

[tool.mypy]
strict = true
explicit_package_bases = true # Required for src layout
mypy_path = ["src/stream_ingestor/src", "stubs"]
ignore_missing_imports = false
warn_unused_ignores = false

# detection_model is a local ml_api module resolved at runtime via PYTHONPATH
[[tool.mypy.overrides]]
module = "detection_model"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    ".", 
    "src"
]
testpaths = ["tests", "src/*/tests"]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (medium speed, real dependencies)",
    "e2e: marks tests as end-to-end tests (slow, full system)",
    "circleci: marks tests that can run in CI/CD environments without local credentials",
    "local_credentials: marks tests that require local credentials.json or token.json files",
]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]
